Add basic imgui integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Lúcás Meier <cronokirby@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-glium = "0.23.0"
+glium = "0.22.0"
+imgui = "0.0.21"
+imgui-glium-renderer = "*"
