Add basic nom parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 [dependencies]
 glium = "0.22.0"
 imgui = "0.0.21"
-imgui-glium-renderer = "*"
+imgui-glium-renderer = "0.0.21"
+nom = "4.1.1"
